Use new types in DFS implentation

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "20aa0af2",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
     "    node_sizes = [100 if node == start_node or node == end_node  else 15 for node in G.nodes()]\n",
     "\n",
     "    adj_dict = {\n",
-    "        int(u): {str(v): d[0]['length'] for v, d in nbrs.items()}\n",
+    "        int(u): {str(v): round(float(d[0]['length']), 2) for v, d in nbrs.items()}\n",
     "        for u, nbrs in G.adj.items()\n",
     "    }\n",
     "\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "ff9aa81f",
    "metadata": {},
    "outputs": [],
@@ -87,6 +87,8 @@
     "    weight: Weight\n",
     "\n",
     "Neighbors: TypeAlias = dict[Vertex, Weight]\n",
+    "\n",
+    "# Graph Library\n",
     "\n",
     "def graph_get_neighbors(vertex: Vertex, adj_dict: dict[Vertex, Neighbors]) -> Neighbors:\n",
     "    return copy.deepcopy(adj_dict[vertex])\n",
@@ -107,50 +109,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "e875584c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'472421843': np.float64(78.06417482116044),\n",
-       " '64656625': np.float64(100.74208327094347)}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Edge(vertex='472421843', weight=78.06)\n",
+      "Edge(vertex='64656625', weight=100.74)\n"
+     ]
     }
    ],
    "source": [
-    "graph_get_neighbors(64657852)\n"
+    "nbors = graph_get_neighbors(64657852, adj_dict)\n",
+    "while graph_hasmore_neighbors(nbors):\n",
+    "    print(graph_next_neighbor_pair(nbors))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "3c0ca1c2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# DFS implementation\n",
-    "def dfs(start, end):\n",
-    "    visted = set()\n",
-    "    return dfs_helper(start, end, visted)\n",
+    "def dfs(start: Vertex, end: Vertex) -> bool:\n",
+    "    visited: set[Vertex] = set()\n",
     "\n",
-    "def dfs_helper(start, end, visted):\n",
-    "    if int(start) == int(end):\n",
-    "        return True\n",
-    "    \n",
-    "    visted.add(start)\n",
-    "    nbors = graph_get_neighbors(start)\n",
-    "    while graph_hasmore_neighbors(nbors):\n",
-    "        vertex = graph_next_neighbor_key(nbors)\n",
-    "\n",
-    "        if vertex not in visted and dfs_helper(vertex, end, visted):\n",
+    "    def dfs_helper(current: Vertex, target: Vertex, visited: set[Vertex]) -> bool:\n",
+    "        if current == target:\n",
     "            return True\n",
-    "    return False"
+    "        \n",
+    "        visited.add(current)\n",
+    "        nbors = graph_get_neighbors(current)\n",
+    "        \n",
+    "        while graph_hasmore_neighbors(nbors):\n",
+    "            neighbor = graph_next_neighbor_key(nbors)\n",
+    "\n",
+    "            if neighbor not in visited:\n",
+    "                if dfs_helper(neighbor, target, visited):\n",
+    "                    return True\n",
+    "        return False\n",
+    "    \n",
+    "    return dfs_helper(start, end, visited)"
    ]
   },
   {
